feat(style.css): add linear gradient opaque effect over img.

--- a/ex1-bubble-tea-shop/index.html
+++ b/ex1-bubble-tea-shop/index.html
@@ -15,7 +15,7 @@
         <img src="./preview-img.jpeg" />
         <div class="text-box-bottom">Kully-Qoo Bubble Tea ตลาดปากน้ำ</div>
         <div class="text-box-top">ปากน้ำ</div>
-        <div></div>
+        <div class="gradient"></div>
       </div>
     </div>
   </body>
