feat(index.html, style.css): add chatbox bubble tail.

--- a/ex2-techup-chatroom/index.html
+++ b/ex2-techup-chatroom/index.html
@@ -24,6 +24,7 @@
       <header class="chatroom-header">Techup Chatroom</header>
       <div class="chatroom-sender">
         <p class="chatroom-sender-chat1 bubble">สวัสดีจ้า</p>
+        <div class="bubble-tail"></div>
         <p class="chatroom-sender-chat2 bubble">Coding สนุกจังเลย</p>
         <p class="close-button">x</p>
         <p class="chatroom-sender-chat3 bubble">🥳🤩</p>
