--- a/ex2-techup-chatroom/index.html
+++ b/ex2-techup-chatroom/index.html
@@ -1,20 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./style.css" />
-  <script src="https://kit.fontawesome.com/bf7220ad33.js" crossorigin="anonymous"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap" rel="stylesheet">
-  <title>Positioned Layout Exercise 2 TechUp Chatroom</title>
-</head>
-
-<body>
-  <!-- Start coding here -->
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <script
+      src="https://kit.fontawesome.com/bf7220ad33.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap"
+      rel="stylesheet"
+    />
+    <title>Positioned Layout Exercise 2 TechUp Chatroom</title>
+  </head>
+  <body>
+    <!-- Start coding here -->
+    <div class="container">
+      <div class="nav"><p>Techup Chatroom</p></div>
+      <div class="window">
+        <div class="question">
+          <div class="item-1"><p>😍</p></div>
+          <div class="item-2"><p>💗</p></div>
+        </div>
+        <div class="answer">
+          <div class="item-4"><p>สวัสดีจ้า</p></div>
+          <div class="item-5">
+            <p>Coding สนุกจังเลย</p>
+            <div class="cross">❎</div>
+          </div>
+          <div class="item-6"><p>😃😁</p></div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
